infra/k8s/depl_client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-pod
  template:
    metadata:
      labels:
        app: client-pod
    spec:
      containers:
        - name: client-pod-container
          image: vineshgoyal/micro_serv_client
---
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-service
spec:
  ports:
    - protocol: TCP
      port: 8082 # Port exposed by the service
      targetPort: 80 # Port your client app listens on
  selector:
    app: client-pod # Matches your posts Pod labels
